refactored to go straight to owner wallet when tipped

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,14 +1,14 @@
 [features]
 seeds = false
 skip-lint = false
-[programs.localnet]
-tip_board = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+[programs.devnet]
+tip_board = "7vZPMfghSw2rQWhvCs1XW6CDLunP36jB253bQVWWMUmu"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "devnet"
 wallet = "/Users/matt/.config/solana/id.json"
 
 [scripts]
