--- a/programs/tip_board/Cargo.toml
+++ b/programs/tip_board/Cargo.toml
@@ -16,4 +16,6 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.26.0"
+anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
+solana-program = "=1.17.7"
+ahash = "=0.8.6"
