--- a/programs/tip_board/Cargo.toml
+++ b/programs/tip_board/Cargo.toml
@@ -19,3 +19,4 @@ default = []
 anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
 solana-program = "=1.17.7"
 ahash = "=0.8.6"
+pyth-sdk-solana = "0.9.0"
